--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_data_connect: ^0.1.3+2
   firebase_auth: ^5.5.1
   shared_preferences: ^2.5.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
